--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,10 @@
 Revision history for Perl extension Inline::Java
 ------------------------------------------------
 
+0.59 Mon Jan 29 07:02:52 GMT 2018
+ - zap no_index line
+ - put . in Makefile.PL @INC for perl 5.26+
+
 0.58 Sat Nov 29 09:18:45 2014 +0000
  - add no_index metadata
 
