--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,16 @@
 Revision history for Perl extension Inline::Java
 ------------------------------------------------
 
+0.61 Sat Feb 10 05:01:23 GMT 2018
+ - manifest test and fix
+ - no ask about JNI on build
+ - tidy up repo, use lib dir, zap dup tests
+ - support Java 9
+ - CI tests for Java 7-9
+ - remove pointless dep on Inline::C
+ - update tests to work in parallel
+ - rework java-build to avoid parallel-build fail
+
 0.60 Tue Jan 30 18:53:01 GMT 2018
  - apply Debian reproducible-build patch
  - Added license meta name. (thanks @manwar)
