--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,9 @@
 Revision history for Perl extension Inline::Java
 ------------------------------------------------
 
+0.66 Fri Apr  6 01:26:50 BST 2018
+ - Fix build on Cygwin [RT#119307] - thanks @mperry2!
+
 0.65 Tue Apr  3 22:10:55 BST 2018
  - put glob in better place to dodge wildcard problems on Win32 gmake 4.2.1
  - use registry on Win32 to find JAVA_HOME if not in env
